--- a/posts/文件夹设置图片封面.md
+++ b/posts/文件夹设置图片封面.md
@@ -1,3 +1,14 @@
+---
+title: 文件夹设置图片封面
+published: 2025-12-29
+description: ""
+image: ""
+tags: []
+category: Uncategorized
+draft: false
+pinned: false
+lang: zh-CN
+---
 这是一个非常专业且具体的自动化需求。使用 PowerShell 结合 ImageMagick 是处理此类任务的最佳选择，因为 ImageMagick 的命令行处理图片能力极强，而 PowerShell 能很好地与 Windows 系统交互。
 
 ### 前置准备
