docs(blog): 更新文章元数据并优化内容
- 为 Android、RSS、文件夹封面及 SSH 教程补充标签 (tags) 和分类 (category)

- 取消加密文章和 Markdown 教程的首页置顶

- 优化文章内容：

    - SSH 教程：将硬编码 IP 替换为占位符，增强通用性

    - 文件夹封面教程：补充个人使用背景及需求说明

    - 乱码教程：修正标题并增加参考链接

- 相册更新：将外链相册设为显示，并为隐藏相册添加封面图

--- a/posts/文件夹设置图片封面.md
+++ b/posts/文件夹设置图片封面.md
@@ -3,31 +3,32 @@ title: 文件夹设置图片封面
 published: 2025-12-29
 description: ""
 image: ""
-tags: []
-category: Uncategorized
+tags: ["powershell","ImageMagick"]
+category: 漫画
 draft: false
 pinned: false
 lang: zh-CN
 ---
-这是一个非常专业且具体的自动化需求。使用 PowerShell 结合 ImageMagick 是处理此类任务的最佳选择，因为 ImageMagick 的命令行处理图片能力极强，而 PowerShell 能很好地与 Windows 系统交互。
+    个人需求，没啥好用的漫画阅读器，有个叫`Rulia`的我还蛮喜欢，但是作者创业去了，好久没更新了，读取文件夹图片的功能一直没有，有个连`kavita`的插件，试了下，压根连不上。就想直接改文件夹图标不就直接当书架了吗。有个能改压缩包封面的工具，不太符合我喜欢解压看的需求.
+    所以决定自己写个脚本替换文件夹封面，集成到右键,使用 PowerShell 结合 ImageMagick 处理此类任务，因为 ImageMagick 的命令行处理图片能力极强，而 PowerShell 能很好地与 Windows 系统交互。
 
 ### 前置准备
 
 1. **安装 ImageMagick**: 脚本依赖 `magick` 命令。
-    - 请前往 [ImageMagick官网](https://www.google.com/search?q=https://imagemagick.org/script/download.php%23windows) 下载 Windows 版本（建议下载 `ImageMagick-x.x.x-Q16-HDRI-x64-dll.exe` [点击下载](https://imagemagick.org/archive/binaries/ImageMagick-7.1.2-11-Q16-HDRI-x64-dll.exe "版本 ImageMagick-7.1.2-11-Q16-HDRI-x64-dll.exe")。
+    - 前往 [ImageMagick官网](https://www.google.com/search?q=https://imagemagick.org/script/download.php%23windows) 下载 Windows 版本（建议下载 `ImageMagick-x.x.x-Q16-HDRI-x64-dll.exe` [点击下载](https://imagemagick.org/archive/binaries/ "版本 ImageMagick-7.1.2-11-Q16-HDRI-x64-dll.exe")。
     - **关键步骤**：安装时务必勾选 **"Install legacy utilities (e.g. convert)"** 和 **"Add application directory to your system path"**，确保在终端能直接运行 `magick`。
 
 ---
 
 ### 第一步：主逻辑脚本 (`Set-FolderCover.ps1`)
 
-请在任意位置（建议固定目录，如 `C:\Scripts\FolderCover`）创建一个名为 `Set-FolderCover.ps1` 的文件，并粘贴以下代码。
+在任意位置（建议固定目录，如 `C:\Scripts\FolderCover`）创建一个名为 `Set-FolderCover.ps1` 的文件，并粘贴以下代码。
 这个脚本实现了：
 1. 自动判断输入是文件夹还是图片。
 2. 调用 ImageMagick 进行 **中心 1:1 剪切**（保留最大尺寸）。
 3. 生成隐藏的 `folder.jpg` 并设置文件夹属性。
 4. 错误捕获并记录到文档文件夹。
-```PowerShell
+```powershell
 param (
     [string]$TargetItem
 )
@@ -160,7 +161,7 @@ catch {
 这个脚本会自动获取当前路径，写入注册表。它会注册两个位置：
 1. `Directory` (右键文件夹)
 2. `SystemFileAssociations\image` (右键图片文件)
-```PowerShell
+```powershell
 # 必须以管理员身份运行
 if (!([Security.Principal.WindowsPrincipal][Security.Principal.WindowsIdentity]::GetCurrent()).IsInRole([Security.Principal.WindowsBuiltInRole] "Administrator")) {
     Start-Process powershell.exe "-NoProfile -ExecutionPolicy Bypass -File `"$PSCommandPath`"" -Verb RunAs
@@ -173,7 +174,7 @@ $TargetScript = Join-Path -Path $ScriptDir -ChildPath "Set-FolderCover.ps1"
 
 # 检查目标脚本是否存在
 if (-not (Test-Path $TargetScript)) {
-    Write-Host "错误：找不到 Set-FolderCover.ps1，请确保两个脚本在同一目录下。" -ForegroundColor Red
+    Write-Host "错误：找不到 Set-FolderCover.ps1，确保两个脚本在同一目录下。" -ForegroundColor Red
     Pause
     Exit
 }
@@ -183,7 +184,7 @@ try {
     $ver = magick -version
     Write-Host "检测到 ImageMagick 已安装。" -ForegroundColor Green
 } catch {
-    Write-Host "警告：未检测到 'magick' 命令。请确保安装了 ImageMagick 并添加到了系统环境变量 PATH 中。" -ForegroundColor Yellow
+    Write-Host "警告：未检测到 'magick' 命令。确保安装了 ImageMagick 并添加到了系统环境变量 PATH 中。" -ForegroundColor Yellow
     Write-Host "脚本可能无法正常工作。" -ForegroundColor Yellow
     Pause
 }
@@ -246,15 +247,15 @@ Pause
     - 将上述两个脚本保存在同一文件夹中，例如 `D:\Tools\FolderCover\`。
 2. **安装**：
     - 右键点击 `Register-RightClick.ps1`，选择 **"使用 PowerShell 运行"**。
-    - 脚本会自动请求管理员权限，确认即可。
+    - 脚本会自动求管理员权限，确认即可。
 3. **使用**：
     - **文件夹**：右键点击文件夹，选择“设置纯图封面 (1:1)”。
     - **图片**：进入文件夹，右键点击想要作为封面的图片，选择“设为当前文件夹封面 (1:1)”。
     - **批量操作**：选中多个文件夹，右键选择菜单，Windows 会自动逐个执行脚本。
 4. **查看结果**：
-    - 如果封面没有立即更新，请按 `F5` 刷新，或等待几秒钟（Windows 缩略图缓存可能有延迟）。
+    - 如果封面没有立即更新，按 `F5` 刷新，或等待几秒钟（Windows 缩略图缓存可能有延迟）。
 5. **排查错误**：
-    - 如果没反应，请打开 `文档` 文件夹，查看 `FolderCover_ErrorLog.txt`。
+    - 如果没反应，打开 `文档` 文件夹，查看 `FolderCover_ErrorLog.txt`。
 
 ### 关于 ImageMagick 命令的特别说明
 
